2003-12-20  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* backend/test.c doc/descriptions/test.desc: Fixed initial value
	  for --fixed-constraint-range (bug #300388).
	* include/sane/sanei_usb.h: Include stdlib.h for size_t.

2003-12-18  Gerhard Jaeger <gerhard@gjaeger.de>
	* doc/sane-plustek.man: new version, minor fixes
	* doc/descriptions/plustek.desc: new backend version
	* backend/plustek-pp*: cleanup work
	* backend/plustek-usb*: new version 0.47, added support for model overide
	  when one manufacturer uses the same model-id for various devices.

2003-12-16  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Canon 3200F.
	* backend/gt68xx_gt6801.h: Made internal function static.
	
2003-12-15  Oliver Schirrmeister <oschirr@abm.de>
	* backends/fujitsu.[hc]: Bugfix: The options pagewidth and
	  pageheight were disabled for the fi4530
         
2003-12-15  Eugene Weiss <eweiss@sbcglobal.net>
	*  backend/as6e.c:  fixed bugs 300123 and 300133.

2003-12-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added some scanners.
	* doc/sane-mustek_pp_ccd.man: Removed (now again in mustek_pp backend).

2003-12-15  Oliver Schirrmeister <oschirr@abm.de>
	* backends/fujitsu.[hc]:
         - Bugfix: set default threshold range to 0..255 There is a problem
           with the M3093 when you are not allows to set the threshold to 0.
         - Bugfix: set the allowable x- and y-DPI values from VPD. Scanning
           with x=100 and y=100 dpi with an fi4120 resulted in an image
           with 100,75 dpi.
         - Bugfix: Set the default value of gamma to 0x80 for all scanners
           that don't have build in gamma patterns.
         - Bugfix: fi-4530 and fi-4210 don't support standard paper size
           spezification. Disabled this option for these scanners.

2003-12-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Eugene S. Weiss has CVS write access now.