@@ -3,6 +3,7 @@
 	* backend/test.c doc/descriptions/test.desc: Fixed initial value
 	  for --fixed-constraint-range (bug #300388).
 	* include/sane/sanei_usb.h: Include stdlib.h for size_t.
+	* sanei/sanei_constrain_value.c: Fixed overflow (bug #300389).
 
 2003-12-18  Gerhard Jaeger <gerhard@gjaeger.de>
 	* doc/sane-plustek.man: new version, minor fixes
